# org.muhkuh.tools-fat_tool

./: .gitignore  CMakeLists.txt  README.md  readme.txt  truncate_image.lua
.github/workflows/: main.yml
cmake/tests/: mingw_dll_dependencies.py
configure/: configure.h
doc/: COPYRIGHT_libfat.txt  changelog.txt  code_updates.txt
msvc8/fat_lualib/: fat_lualib.vcproj
msvc8/fat_tool/: fat_tool.sln  fat_tool.vcproj
pom/: fat_tool.pom
src/: fat_tool.c  fat_tool.cpp  fat_tool.h  fatfs.cpp  fatfs.h  fatfs.i  fatfs_wrap.cxx  gen_swig_wrapper.bat  platform.c  platform.h
src/fat/: cache.c  cache.h  cache_dummy.c  common.h  compiler.h  directory.c  directory.h  disk_io.h  file_allocation_table.c  file_allocation_table.h  file_functions.c  file_functions.h  filetime.c  filetime.h  format.c  format.h  partition.c  partition.h  wrapper.c
src/ramdisk/: interface.c  interface.h
templates/: fat_tool.py  version.h
test/: fatfs_test.lua  make_nsc_img.lua  test_description.xml  test_tool.bat
